--- a/differential-evolution.ipynb
+++ b/differential-evolution.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:b8146716f8868dbed2868893e2dbf9ea0b9b1bbe748047dbfef81649daabbc15"
+  "signature": "sha256:fe7c225ed37f087229e1bd118e64e14c2fdb6cfe5117de1351409be42432249c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1064,8 +1064,73 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def getAsyncFitness(member):\n",
+      "    import tasks\n",
+      "\n",
+      "    expected = noisyResults\n",
+      "    sbml = rr.getSBML()\n",
+      "    \n",
+      "    tasks.rrChain.delay([\n",
+      "        ['load', sbml],\n",
+      "        ['reset'],\n",
+      "        [['model', 'setGlobalParameterValues'], member.params],\n",
+      "        ['simulate', TIME_START, TIME_END, TIME_STEPS]\n",
+      "    ])\n",
+      "        \n",
+      "    try:\n",
+      "        obs = rr.simulate(TIME_START, TIME_END, TIME_STEPS)\n",
+      "\n",
+      "        sumofsquares = 0\n",
+      "        for index, value in np.ndenumerate(obs):\n",
+      "                expectedValue = expected[index[0], index[1]]\n",
+      "                residual = (value - expectedValue)\n",
+      "                sumofsquares += residual ** 2\n",
+      "    except RuntimeError:\n",
+      "        sumofsquares = float('inf')\n",
+      "    return sumofsquares"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import tasks\n",
+      "tasks.echo.delay('hello')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rr.getSBML()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<!-- Created by libAntimony version v2.5 on 2014-09-03 22:09 with libSBML version 5.10.0. -->\\n<sbml xmlns=\"http://www.sbml.org/sbml/level3/version1/core\" level=\"3\" version=\"1\">\\n  <model id=\"__main\" name=\"__main\">\\n    <listOfCompartments>\\n      <compartment sboTerm=\"SBO:0000410\" id=\"default_compartment\" spatialDimensions=\"3\" size=\"1\" constant=\"true\"/>\\n    </listOfCompartments>\\n    <listOfSpecies>\\n      <species id=\"S1\" compartment=\"default_compartment\" initialConcentration=\"0\" hasOnlySubstanceUnits=\"false\" boundaryCondition=\"false\" constant=\"false\"/>\\n      <species id=\"S2\" compartment=\"default_compartment\" initialConcentration=\"1\" hasOnlySubstanceUnits=\"false\" boundaryCondition=\"false\" constant=\"false\"/>\\n    </listOfSpecies>\\n    <listOfParameters>\\n      <parameter id=\"J0_v0\" value=\"8\" constant=\"true\"/>\\n      <parameter id=\"J1_k3\" value=\"1\" constant=\"true\"/>\\n      <parameter id=\"J2_k1\" value=\"1\" constant=\"true\"/>\\n      <parameter id=\"J2_c\" value=\"1\" constant=\"true\"/>\\n      <parameter id=\"J2_q\" value=\"3\" constant=\"true\"/>\\n      <parameter id=\"J3_k2\" value=\"5\" constant=\"true\"/>\\n    </listOfParameters>\\n    <listOfReactions>\\n      <reaction id=\"J0\" reversible=\"true\" fast=\"false\">\\n        <listOfProducts>\\n          <speciesReference species=\"S1\" stoichiometry=\"1\" constant=\"true\"/>\\n        </listOfProducts>\\n        <kineticLaw>\\n          <math xmlns=\"http://www.w3.org/1998/Math/MathML\">\\n            <ci> J0_v0 </ci>\\n          </math>\\n        </kineticLaw>\\n      </reaction>\\n      <reaction id=\"J1\" reversible=\"true\" fast=\"false\">\\n        <listOfReactants>\\n          <speciesReference species=\"S1\" stoichiometry=\"1\" constant=\"true\"/>\\n        </listOfReactants>\\n        <kineticLaw>\\n          <math xmlns=\"http://www.w3.org/1998/Math/MathML\">\\n            <apply>\\n              <times/>\\n              <ci> J1_k3 </ci>\\n              <ci> S1 </ci>\\n            </apply>\\n          </math>\\n        </kineticLaw>\\n      </reaction>\\n      <reaction id=\"J2\" reversible=\"true\" fast=\"false\">\\n        <listOfReactants>\\n          <speciesReference species=\"S1\" stoichiometry=\"1\" constant=\"true\"/>\\n        </listOfReactants>\\n        <listOfProducts>\\n          <speciesReference species=\"S2\" stoichiometry=\"1\" constant=\"true\"/>\\n        </listOfProducts>\\n        <kineticLaw>\\n          <math xmlns=\"http://www.w3.org/1998/Math/MathML\">\\n            <apply>\\n              <times/>\\n              <ci> J2_k1 </ci>\\n              <ci> S1 </ci>\\n              <apply>\\n                <plus/>\\n                <cn type=\"integer\"> 1 </cn>\\n                <apply>\\n                  <times/>\\n                  <ci> J2_c </ci>\\n                  <apply>\\n                    <power/>\\n                    <ci> S2 </ci>\\n                    <ci> J2_q </ci>\\n                  </apply>\\n                </apply>\\n              </apply>\\n            </apply>\\n          </math>\\n        </kineticLaw>\\n      </reaction>\\n      <reaction id=\"J3\" reversible=\"true\" fast=\"false\">\\n        <listOfReactants>\\n          <speciesReference species=\"S2\" stoichiometry=\"1\" constant=\"true\"/>\\n        </listOfReactants>\\n        <kineticLaw>\\n          <math xmlns=\"http://www.w3.org/1998/Math/MathML\">\\n            <apply>\\n              <times/>\\n              <ci> J3_k2 </ci>\\n              <ci> S2 </ci>\\n            </apply>\\n          </math>\\n        </kineticLaw>\\n      </reaction>\\n    </listOfReactions>\\n  </model>\\n</sbml>\\n'"
+       ]
+      }
+     ],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "de = DiffEvolution(rr,\n",
-      "                   fitnessFcn=getFitness,\n",
+      "                   fitnessFcn=getAsyncFitness,\n",
+      "                   ASYNC=True,\n",
       "                   MAX_GENS=100,\n",
       "                   POPULATION=100,\n",
       "                   paramRangeDict={\n",
